[package]
name = "wizctl"
version = "0.1.1"
edition = "2021"
description = "A simple command line utility for controlling Wiz Connected LED light strips."
homepage = "https://github.com/jooris-hadeler/wizctl"
license = "MIT OR Apache-2.0"
keywords = ["cli", "terminal", "utility"]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_repr = "0.1.19"
thiserror = "1.0.63"
